--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -15,6 +14,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^6.0.8",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "passport": "^0.5.0",
+    "body-parser": "^1.19.0",
+    "passport-local": "^1.0.0"
   }
 }
